# frustum_clipping

./: CMakeLists.txt  README.md  main.cpp
include/: Clipper.h  Clipper.inl  ConvexPolyedron.h  ConvexPolyedron.inl  ConvexPolyhedron.h  ConvexPolyhedron.inl  Cube.h  Drawer.h  Drawer.inl  Facet.h  Frustum.h
src/: Drawer.cpp  Frustum.cpp  main.cpp
